@@ -1,3 +1,8 @@
+2004-12-24  Sergey V. Udaltsov  <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: from now on, the applet only works as
+	indicator only - all the real stuff is in g-s-d
+
 2004-12-18  Sergey V. Udaltsov  <svu@gnome.org>
 
 	* gnome-settings-keyboard-xkb.c: reflect changes in libgswitchit
